division box text wrap has fixed

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ span {
 }
 
 .box span {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: var(--main-bg);
 }
 .box::after {
